# ansible-localuser

./: .ansible-lint  .gitignore  .yamllint  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  tox.ini
.ansible/collections/ansible_collections/tcharl/ansible_localuser/: .yamllint  FILES.json  MANIFEST.json  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.ansible/collections/ansible_collections/tcharl/ansible_localuser/.ansible/roles/robertdebock.bootstrap/meta/: .galaxy_install_info
.ansible/collections/ansible_collections/tcharl/ansible_localuser/.ansible/roles/robertdebock.core_dependencies/meta/: .galaxy_install_info
.ansible/collections/ansible_collections/tcharl/ansible_localuser/.github/workflows/: molecule.yml
.ansible/collections/ansible_collections/tcharl/ansible_localuser/defaults/: main.yml
.ansible/collections/ansible_collections/tcharl/ansible_localuser/meta/: main.yml
.ansible/collections/ansible_collections/tcharl/ansible_localuser/molecule/default/: converge.yml  molecule.yml
.ansible/collections/ansible_collections/tcharl/ansible_localuser/tasks/: requirements.yml  system-users.yml
.ansible/roles/robertdebock.users/meta/: .galaxy_install_info
.github/workflows/: molecule.yml
molecule/default/: converge.yml  molecule.yml
tasks/: local-groups.yml  local-users.yml  main.yml  requirements.yml
